namespaces/myblog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myblog
  labels:
    istio.io/rev: asm-1104-6
