namespaces/myblog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myblog
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "myblog"}'
  labels:
    app: myblog
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: myblog
