namespaces/myblog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myblog
  annotations:
    kubernetes.io/ingress.global-static-ip-name: myblog
    networking.gke.io/managed-certificates: myblog
    networking.gke.io/v1beta1.FrontendConfig: myblog
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: myblog
            port:
              number: 8080
