namespaces/myblog/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: myblog
spec:
  podSelector:
    matchLabels:
      app: myblog
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []
    ports:
     - port: 8080
       protocol: TCP
  egress:
  - {}
